--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/ytsai0023/hex-layout-train#readme",
   "dependencies": {},
   "devDependencies": {
+    "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
+    "gulp-watch": "^5.0.1",
     "node-sass": "^4.14.1"
   }
 }
