--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-data": "^1.3.1",
+    "gulp-ejs": "^5.1.0",
     "gulp-sass": "^4.1.0",
+    "gulp-template": "^5.0.0",
     "gulp-watch": "^5.0.1",
     "node-sass": "^4.14.1"
   }
