--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "url": "https://github.com/ytsai0023/hex-layout-train/issues"
   },
   "homepage": "https://github.com/ytsai0023/hex-layout-train#readme",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-rename": "^2.0.0",
+    "nunjucks": "^3.2.1"
+  },
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-data": "^1.3.1",
     "gulp-ejs": "^5.1.0",
+    "gulp-nunjucks-render": "^2.2.3",
     "gulp-sass": "^4.1.0",
     "gulp-template": "^5.0.0",
     "gulp-watch": "^5.0.1",
